--- a/my-app/src/app/date/date.component.html
+++ b/my-app/src/app/date/date.component.html
@@ -1,4 +1,6 @@
 <div>
   <h3>Frameworks:</h3>
-  <p *ngFor="let item of items; let i = index">{{i+1}}. {{ item }}</p>
+  <ul>
+    <li *ngFor="let item of items">{{ item }}</li>
+  </ul>
 </div>
