--- a/my-app/src/app/date/date.component.html
+++ b/my-app/src/app/date/date.component.html
@@ -1,6 +1,9 @@
 <div>
   <h3>Frameworks:</h3>
-  <ul>
-    <li *ngFor="let item of items">{{ item }}</li>
-  </ul>
+  <p *ngFor=
+    "let item of items;
+    let i = index;
+    let first = first;
+    let last = last;" [ngClass]="{first: first, last: last}">
+    {{ i+1 }}. {{ item }} is last "{{ last }}"</p>
 </div>
