--- a/my-app/src/app/date/date.component.html
+++ b/my-app/src/app/date/date.component.html
@@ -3,7 +3,7 @@
   <p *ngFor=
     "let item of items;
     let i = index;
-    let first = first;
-    let last = last;" [ngClass]="{first: first, last: last}">
-    {{ i+1 }}. {{ item }} is last "{{ last }}"</p>
+    let even = even;
+    let odd = odd;" [ngClass]="{even: even, odd: odd}">
+    {{ i+1 }}. {{ item }}"</p>
 </div>
