--- a/my-app/src/app/date/date.component.html
+++ b/my-app/src/app/date/date.component.html
@@ -1,3 +1,6 @@
-<div *ngIf="!loggedIn">
+<div *ngIf="loggedIn; else loggedOut">
   Logged in.
 </div>
+<ng-template #loggedOut>
+  Please, login.
+</ng-template>
