--- a/my-app/src/app/date/date.component.html
+++ b/my-app/src/app/date/date.component.html
@@ -1,6 +1,8 @@
-<div *ngIf="loggedIn; else loggedOut">
+<!-- like a ngIf = expression ? then : else -->
+<ng-template *ngIf="loggedIn; then li; else lo"></ng-template>
+<ng-template #li>
   Logged in.
-</div>
-<ng-template #loggedOut>
+</ng-template>
+<ng-template #lo>
   Please, login.
 </ng-template>
