--- a/my-app/src/app/date/date.component.html
+++ b/my-app/src/app/date/date.component.html
@@ -1,1 +1,8 @@
-<button (click)="myEvent($event)">Event</button>
+<button *ngIf="isCollapsed" (click)="toggleCollapse()">Show</button>
+<button *ngIf="!isCollapsed" (click)="toggleCollapse()">Hide</button>
+<div *ngIf="!isCollapsed">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis
+    sunt rem iure pariatur tempore reprehenderit voluptatum, nisi cupiditate
+    ullam repudiandae esse, facilis fugiat exercitationem? Laboriosam vel
+    corrupti voluptatum maiores itaque.</p>
+</div>
