--- a/my-app/src/app/date/date.component.css
+++ b/my-app/src/app/date/date.component.css
@@ -1,15 +1,7 @@
-.first {
-    font-size: 30px;
+.class1 {
+    color: red;
 }
 
-.last {
-    font-size: 35px;
-}
-
-.even {
-    color: green;
-}
-
-.odd {
-    color: blue;
+.class2 {
+    color: yellow;
 }
