--- a/my-app/src/app/date/date.component.html
+++ b/my-app/src/app/date/date.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{class1: false}">
+<div [class.my]="true">
     <h1>Hello, World!</h1>
     <p [ngClass]="{class2: true}">Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Voluptate, quibusdam.</p>
