use directive "ngStyle": parameter – object: key – style property, value – property's value

--- a/my-app/src/app/date/date.component.html
+++ b/my-app/src/app/date/date.component.html
@@ -1,5 +1,5 @@
-<div [class.my]="true">
+<div [ngStyle]="{'color': 'red'}">
     <h1>Hello, World!</h1>
-    <p [ngClass]="{class2: true}">Lorem ipsum dolor sit amet consectetur
+    <p [ngStyle]="{'color': 'yellow', 'background-color': 'darkgrey'}">Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Voluptate, quibusdam.</p>
 </div>
