--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-date></app-date>
+<!--app-date></app-date-->
+<div>
+    User name: <input type="text" [(ngModel)]="userName">
+    <button (click)="search()">Search</button>
+</div>
+<div class="info" *ngIf="response">
+    <img src="{{ response.avatar_url }}" alt="">
+    <p>Name: {{ response.login }}</p>
+    <p>Repositories: {{ response.public_repos }}</p>
+    <p>Bio: {{ response.bio }}</p>
+</div>
